# COMP2130

./: .gitignore  README  configure
Assignment/Part 1/: Makefile.in  README  configure.ac
Assignment/Part 1/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
Assignment/Part 1/include/: config.h.in  spreadsheet.h
Assignment/Part 1/src/: Makefile.am  functions.c
Labs/Lab 1/: addDigits.c  mydivide.c  mysplit.c
Labs/Lab 3/: 2.c  3.c  4.c
Labs/Lab 4/: 1.c  2.c  4.c
Labs/Lab 5/: 1  2.c
include/: functions.h
src/: Makefile.in  main.c  spreadsheet.c
